welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: type booléenne
var fini: booléenne = false
          ^BDRBuggle:3: error: type mismatch;
 found   : Unit
 required: Boolean
while (fini = false){
            ^