welcome.lessons.welcome.bdr.BDR.scala.code
var fini: booléenne = false

while (fini = false){
	if (estSurMessage():Boolean){
	litMessage():String
	
	if (litMessage == "R"){
		droite}
	if (litMessage == "L"){
		gauche()}
	if (litMessage == "I"){
		droite();droite();avance()}
	if (litMessage == "A"){
		avance()}
	if (litMessage == "B"){
		avance();avance()}
	if (litMessage == "C"){
		avance();avance();avance()}
	if (litMessage == "Z"){
		recule()}
	if (litMessage == "Y"){
		recule();recule()}
	if (litMessage == "X"){
		recule();recule();recule()
		
	}
	}else{ fini=true}
}


		
	

